[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/HeartUIFull.png" type="Texture" id=1]
[ext_resource path="res://UI/HealthUI.gd" type="Script" id=2]
[ext_resource path="res://UI/HeartUIEmpty.png" type="Texture" id=3]
[ext_resource path="res://well_prepared sucai/object/shieldui/shield_full.png" type="Texture" id=4]
[ext_resource path="res://well_prepared sucai/object/shieldui/shield_empty.png" type="Texture" id=5]

[node name="HealthUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="HeartUIEmpty" type="TextureRect" parent="."]
margin_right = 60.0
margin_bottom = 11.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2

[node name="HeartUIFUll" type="TextureRect" parent="."]
margin_right = 60.0
margin_bottom = 11.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2

[node name="ShieldUIEmpty" type="TextureRect" parent="."]
margin_top = 13.0
margin_right = 60.0
margin_bottom = 23.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 2

[node name="ShieldUIFULL" type="TextureRect" parent="."]
margin_top = 13.0
margin_right = 60.0
margin_bottom = 23.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
